--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body {
     margin: 0 auto;
 }
 
+.justify {
+    display: flex;
+    justify-content: space-between;
+}
+
+.section {
+    margin-top: 120px;
+}
+
 .slider {
     height: 800px;
     background-image: url('img/slider-img.jpg');
@@ -148,6 +157,14 @@ body {
     background-color: #212121;
 }
 
+.product-menu li a {
+    color: #6c6c6c;
+    font-size: 36px;
+    font-weight: 700;
+    border-bottom: 1px solid #6c6c6c;
+    letter-spacing: -1px;
+}
+
 .product {
     margin-top: 50px;
     margin-bottom: 120px;
@@ -166,26 +183,9 @@ body {
     width: 100%;
 }
 
-.justify {
-    display: flex;
-    justify-content: space-between;
-}
-
-.product-menu {
-    margin-top: 120px;
-}
-
-.product-menu li a {
-    color: #6c6c6c;
-    font-size: 36px;
-    font-weight: 700;
-    border-bottom: 1px solid #6c6c6c;
-    letter-spacing: -1px;
-}
-
 .explore-link {
     padding: 10px 13px;
-    margin-top: 127px;
+    margin-top: 7px;
     color: #212121;
     font-size: 18px;
     font-weight: 700;
@@ -262,6 +262,77 @@ body {
     line-height: 22px;
     text-align: center;
     cursor: default;
+}
+
+.promo-container {
+    position: relative;
+    text-align: left;
+}
+
+.promo-container img {
+    width: 100%;
+}
+
+.promo-container .content {
+    position: absolute;
+    top: 33%;
+    left: 51px;
+}
+
+.content h4 {
+    color: #1e88e5;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 3.6px;
+    line-height: 16px;
+}
+
+.content h2 {
+    margin-top: 12px;
+    color: #212121;
+    font-size: 36px;
+    font-weight: 700;
+    letter-spacing: -1px;
+    line-height: 34px;
+}
+
+.content p {
+    margin-top: 24px;
+    margin-bottom: 44px;
+    color: #6c6c6c;
+    font-size: 13.99px;
+    font-weight: 300;
+    line-height: 24px;
+    text-align: left;
+    transform: scaleY(1.0022);
+    width: 374px;
+}
+
+.button {
+    background-color: #ffffff;
+    box-shadow: 0px 2px 4.85px 0.15px rgba(33, 33, 33, 0.35);
+    padding: 10px 31px;
+    line-height: 13px;
+    color: #212121;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 3.6px;
+}
+
+.button.button-round {
+    border-radius: 22.5px;
+}
+
+.button:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.button:active {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 @keyframes fall-down {
