--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700');
+@import 'header.css';
+@import 'elements.css';
+@import 'components.css';
+@import 'hover.css';
 
 * {
     margin: 0;
