--- a/public/css/components.css
+++ b/public/css/components.css
@@ -1,3 +1,41 @@
+.slider {
+    height: 800px;
+    position: relative;
+}
+
+.slider-text {
+    position: relative;
+    top: 283px;
+}
+
+.slider-text p {
+    width: 458px;
+    margin-bottom: 32px;
+    color: #6c6c6c;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 24px;
+}
+
+.slider-text h4 {
+    color: #43a047;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 13px;
+    text-align: left;
+    margin-bottom: 22px;
+}
+
+.slider-text h2 {
+    color: #212121;
+    font-size: 62px;
+    font-weight: 100;
+    line-height: 43px;
+    text-transform: uppercase;
+    margin-bottom: 34px;
+    letter-spacing: -3px;
+}
+
 .product-menu li a {
     color: #6c6c6c;
     font-size: 36px;
